Uppdatera webshop-produktsidor, UTF-fixar och meny-länkar

--- a/frontend/Kontakt/Om_Klubben.html
+++ b/frontend/Kontakt/Om_Klubben.html
@@ -63,6 +63,18 @@
         <p style="margin:0 0 10px 0;color:#35566d;font-size:14px;line-height:1.6;">E-post simskola: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">simskolan@ljungbyss.se</span></p>
         <p style="margin:0;color:#2f4c61;font-size:14px;line-height:1.6;">Hemsida: <a href="https://www.ljungbyss.se" style="color:#0077c8;font-weight:600;text-decoration:none;">www.ljungbyss.se</a></p>
       </section>
+
+      <section style="background:#FCFBF8;border:1px solid rgba(0,90,153,0.14);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+        <div style="width:52px;height:3px;border-radius:999px;background:#0077c8;opacity:0.75;margin:0 0 14px 0;"></div>
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Läs vidare</h2>
+        <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Vill du se hur klubben arbetar idag och hur allt hänger ihop?</p>
+        <div style="display:flex;gap:10px;flex-wrap:wrap;">
+          <a href="./Historia.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;">Historia</a>
+          <a href="./Styrelsen.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Styrelsen</a>
+          <a href="./kontaktuppgifter.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Kontaktuppgifter</a>
+          <a href="./Kontaktportal.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Kontaktportal</a>
+        </div>
+      </section>
     </div>
   </div>
 </div>
