--- a/frontend/Hem/Webshop-Produkt-mall.html
+++ b/frontend/Hem/Webshop-Produkt-mall.html
@@ -2,7 +2,6 @@
   <div style="min-height:100vh;padding:40px 20px;border-radius:12px;overflow:hidden;background:linear-gradient(145deg,#edf6fc 0%,#f4f9ff 30%,#eef6fc 60%,#f7fbff 100%);">
     <div style="max-width:895px;margin:0 auto;">
       <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
-        <a href="https://ljungbyss.web.sportadmin.se/sida/?ID=575279" style="display:inline-flex;align-items:center;justify-content:center;padding:10px 16px;min-height:40px;border-radius:6px;border:1px solid #dde9f5;text-decoration:none;font-size:14px;font-weight:600;background:#ffffff;color:#005a99;margin-bottom:14px;">← Webshop</a>
         <h1 style="margin:0 0 8px 0;font-size:28px;line-height:1.2;color:#005a99;">Craft klubbshorts - blå</h1>
         <p style="margin:0;color:#2f4c61;line-height:1.6;font-size:15px;max-width:65ch;">Bekväma och praktiska klubbshorts för träning, aktivitet och vardag.</p>
       </section>
@@ -26,7 +25,7 @@
             <p style="margin:0 0 4px 0;color:#5f7a8f;font-size:13px;font-weight:600;">Pris</p>
             <p style="margin:0 0 14px 0;color:#1a1a1a;font-size:28px;font-weight:700;line-height:1.2;">150 kr</p>
 
-            <a href="https://www.google.com/maps?q=Profilh%C3%B6rnan%20Fabriksgatan%2017%20Ljungby" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;">&#128205; Visa butik p&aring; karta</a>
+            <a href="https://www.google.com/mapsq=Profilh%C3%B6rnan%20Fabriksgatan%2017%20Ljungby" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#ffffff;">&#128205; Visa butik p&aring; karta</a>
 
             <div style="margin-top:12px;background:#f5fbff;border:1px solid #dde9f5;border-radius:12px;padding:12px;">
               <p style="margin:0 0 6px 0;color:#005a99;font-size:14px;font-weight:700;">Butik</p>
