--- a/frontend/Kontakt/Historia.html
+++ b/frontend/Kontakt/Historia.html
@@ -251,19 +251,19 @@
         </details>
       </section>
 
-      <section style="background:linear-gradient(135deg,#eaf5ff 0%,#f6fbff 100%);border:1px solid rgba(0,90,153,0.18);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.06);padding:20px;">
-        <h2 style="margin:0 0 8px 0;color:#005a99;line-height:1.3;font-size:20px;">Läs vidare</h2>
-        <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Fördjupa dig i klubbens nuvarande verksamhet eller besök föreningens huvudsida.</p>
-        <div style="display:flex;gap:10px;flex-wrap:wrap;">
-          <a href="https://www.ljungbyss.se/sida/?ID=50236" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#fff;">Om klubben</a>
-          <a href="https://www.ljungbyss.se/" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;">LSS huvudsida</a>
+      <section style="background:#FCFBF8;border:1px solid rgba(0,90,153,0.14);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;">
+        <div style="width:52px;height:3px;border-radius:999px;background:#0077c8;opacity:0.75;margin:0 0 14px 0;"></div>
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Läs vidare</h2>
+        <p style="margin:0 0 14px 0;color:#2f4c61;font-size:14px;line-height:1.6;max-width:65ch;">Fördjupa dig i klubbens nuvarande verksamhet, styrelse och kontaktvägar.</p>
+        <div style="display:flex;gap:10px;flex-wrap:wrap;padding-top:2px;">
+          <a href="./Om_Klubben.html" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:700;background:#005a99;color:#fff;">Om klubben</a>
+          <a href="./Styrelsen.html" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;">Styrelsen</a>
+          <a href="./kontaktuppgifter.html" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;">Kontaktuppgifter</a>
+          <a href="../simskola/simskolegrupper/simskolegrupper.html" style="display:inline-flex;align-items:center;justify-content:center;padding:12px 20px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;">Simskolegrupper</a>
         </div>
       </section>
     </div>
   </div>
 </div>
-
-
-
 
 
