--- a/frontend/Kontakt/Hjalp_Till_I_Lss.html
+++ b/frontend/Kontakt/Hjalp_Till_I_Lss.html
@@ -14,7 +14,6 @@
                 <span style="border:1px solid rgba(255,255,255,0.34);background:rgba(255,255,255,0.12);border-radius:999px;padding:8px 14px;font-size:13px;font-weight:600;color:#f4f9ff;">B&ouml;rja med ett tillf&auml;lle</span>
                 <span style="border:1px solid rgba(255,255,255,0.34);background:rgba(255,255,255,0.12);border-radius:999px;padding:8px 14px;font-size:13px;font-weight:600;color:#f4f9ff;">Vi matchar dig med r&auml;tt roll</span>
               </div>
-              <div style="margin-top:8px;opacity:0.5;color:#cfe8fb;font-size:12px;letter-spacing:2px;">~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~</div>
             </section>
 
             <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
@@ -191,6 +190,18 @@
                 <a href="https://www.ljungbyss.se/start/?ID=460051" style="display:inline-flex;align-items:center;justify-content:center;padding:13px 24px;min-height:44px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:15px;font-weight:600;background:#fff;color:#005a99;">Kontaktportal</a>
               </div>
               <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;">E-post: <span style="display:inline-block;padding:4px 8px;border-radius:8px;background:#eef6ff;border:1px solid #d7e7f7;color:#005a99;font-weight:700;user-select:all;">info@ljungbyss.se</span></p>
+            </section>
+
+            <section style="background:#FCFBF8;border:1px solid rgba(0,90,153,0.14);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+              <div style="width:52px;height:3px;border-radius:999px;background:#0077c8;opacity:0.75;margin:0 0 14px 0;"></div>
+              <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;letter-spacing:-0.2px;font-size:22px;">Relaterade sidor</h2>
+              <p style="margin:0 0 12px 0;color:#2f4c61;line-height:1.6;font-size:14px;max-width:65ch;">Mer information om engagemang och kontakt i föreningen.</p>
+              <div style="display:flex;gap:10px;flex-wrap:wrap;">
+                <a href="./Ledare.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;">Bli ledare</a>
+                <a href="./Styrelsen.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Styrelsen</a>
+                <a href="./kontaktuppgifter.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Kontaktuppgifter</a>
+                <a href="../simskola/simskolegrupper/simskolegrupper.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Simskolegrupper</a>
+              </div>
             </section>
     </div>
   </div>
