--- a/frontend/Kontakt/Kontaktportal.html
+++ b/frontend/Kontakt/Kontaktportal.html
@@ -57,6 +57,19 @@
           <li><a href="https://ljungbyss.web.sportadmin.se/sida/?ID=576225" style="color:#0077c8;font-weight:600;text-decoration:none;">Sponsorer</a></li>
         </ul>
       </section>
+
+      <section style="background:#FCFBF8;border:1px solid rgba(0,90,153,0.14);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+        <div style="width:52px;height:3px;border-radius:999px;background:#0077c8;opacity:0.75;margin:0 0 14px 0;"></div>
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Relaterade sidor</h2>
+        <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Fördjupa dig i kontaktvägar, föreningen och engagemang.</p>
+        <div style="display:flex;gap:10px;flex-wrap:wrap;">
+          <a href="./kontaktuppgifter.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;">Kontaktuppgifter</a>
+          <a href="./Styrelsen.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Styrelsen</a>
+          <a href="./Om_Klubben.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Om klubben</a>
+          <a href="./Ledare.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Bli ledare</a>
+          <a href="../simskola/simskolegrupper/simskolegrupper.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Simskolegrupper</a>
+        </div>
+      </section>
     </div>
   </div>
 </div>
