--- a/frontend/Kontakt/Styrelsen.html
+++ b/frontend/Kontakt/Styrelsen.html
@@ -91,6 +91,18 @@
           <p style="margin:10px 0 0 0;color:#35566d;font-size:14px;line-height:1.6;"><a href="tel:0735232584" style="color:#0077c8;text-decoration:none;font-weight:700;">073-523 25 84</a> · <a href="mailto:utbildning@ljungbyss.se" style="color:#0077c8;text-decoration:none;font-weight:700;">utbildning@ljungbyss.se</a></p>
         </article>
       </section>
+
+      <section style="background:#FCFBF8;border:1px solid rgba(0,90,153,0.14);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-top:18px;">
+        <div style="width:52px;height:3px;border-radius:999px;background:#0077c8;opacity:0.75;margin:0 0 14px 0;"></div>
+        <h2 style="margin:0 0 10px 0;color:#005a99;font-size:22px;line-height:1.3;">Relaterade sidor</h2>
+        <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">För fler kontaktvägar och mer om föreningen.</p>
+        <div style="display:flex;gap:10px;flex-wrap:wrap;">
+          <a href="./kontaktuppgifter.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;">Kontaktuppgifter</a>
+          <a href="./Kontaktportal.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Kontaktportal</a>
+          <a href="./Om_Klubben.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Om klubben</a>
+          <a href="./Historia.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Historia</a>
+        </div>
+      </section>
     </div>
   </div>
 </div>
