--- a/frontend/Kontakt/kontaktuppgifter.html
+++ b/frontend/Kontakt/kontaktuppgifter.html
@@ -84,6 +84,20 @@
         <p style="margin:28px 0 0;text-align:center;color:#5f7a8f;font-size:14px">Vi ser fram emot att h&ouml;ra fr&aring;n dig.</p>
         <p style="margin:8px 0 0 0;text-align:center;color:#7a90a3;font-size:12px;line-height:1.5;">Om mailappen inte &ouml;ppnas kan du kopiera e-postadressen direkt fr&aring;n knappen.</p>
       </section>
+
+      <section style="background:#FCFBF8;border:1px solid rgba(0,90,153,0.14);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+        <div style="width:52px;height:3px;border-radius:999px;background:#0077c8;opacity:0.75;margin:0 0 14px 0;"></div>
+        <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Relaterade sidor</h2>
+        <p style="margin:0 0 12px 0;color:#2f4c61;font-size:14px;line-height:1.6;">Om du vill läsa mer om föreningen eller engagera dig.</p>
+        <div style="display:flex;gap:10px;flex-wrap:wrap;">
+          <a href="./Kontaktportal.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;">Kontaktportal</a>
+          <a href="./Styrelsen.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Styrelsen</a>
+          <a href="./Om_Klubben.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Om klubben</a>
+          <a href="./Historia.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Historia</a>
+          <a href="./Ledare.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Bli ledare</a>
+          <a href="./Hjalp_Till_I_Lss.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Hjälp till i LSS</a>
+        </div>
+      </section>
     </div>
   </div>
 </div>
