--- a/frontend/Meny.html
+++ b/frontend/Meny.html
@@ -263,6 +263,22 @@
         <ul class="links">
           <li><a class="link-item" href="./Hem/Webshop.html"><span class="link-title">Webshop</span><span class="path">Hem/Webshop.html</span></a></li>
           <li><a class="link-item" href="./Hem/Webshop-Produkt-mall.html"><span class="link-title">Webshop Produkt (mall)</span><span class="path">Hem/Webshop-Produkt-mall.html</span></a></li>
+          <li><a class="link-item" href="./Hem/craft-community-hoodie.html"><span class="link-title">Craft – Community Hoodie</span><span class="path">Hem/craft-community-hoodie.html</span></a></li>
+          <li><a class="link-item" href="./Hem/craft-evolve-full-zip.html"><span class="link-title">Craft - Evolve Full Zip</span><span class="path">Hem/craft-evolve-full-zip.html</span></a></li>
+          <li><a class="link-item" href="./Hem/craft-evolve-pants.html"><span class="link-title">Craft Evolve Pants</span><span class="path">Hem/craft-evolve-pants.html</span></a></li>
+          <li><a class="link-item" href="./Hem/craft-evolve-zip-pocket-shorts.html"><span class="link-title">Craft - Evolve Zip Pocket Shorts</span><span class="path">Hem/craft-evolve-zip-pocket-shorts.html</span></a></li>
+          <li><a class="link-item" href="./Hem/craft-rush-tights.html"><span class="link-title">Craft - Rush Tights</span><span class="path">Hem/craft-rush-tights.html</span></a></li>
+          <li><a class="link-item" href="./Hem/craft-rush-hot-pants.html"><span class="link-title">Craft - Rush Hot Pants</span><span class="path">Hem/craft-rush-hot-pants.html</span></a></li>
+          <li><a class="link-item" href="./Hem/bagbase-universal-backpack.html"><span class="link-title">Bagbase Universal Backpack</span><span class="path">Hem/bagbase-universal-backpack.html</span></a></li>
+          <li><a class="link-item" href="./Hem/bagbase-vaska.html"><span class="link-title">Bagbase Väska</span><span class="path">Hem/bagbase-vaska.html</span></a></li>
+          <li><a class="link-item" href="./Hem/craft-stor-ryggsack-38l.html"><span class="link-title">Craft Stor Ryggs&auml;ck, 38L</span><span class="path">Hem/craft-stor-ryggsack-38l.html</span></a></li>
+          <li><a class="link-item" href="./Hem/stanno-vaska.html"><span class="link-title">Stanno V&auml;ska</span><span class="path">Hem/stanno-vaska.html</span></a></li>
+          <li><a class="link-item" href="./Hem/supportertroja.html"><span class="link-title">Supportertr&ouml;ja</span><span class="path">Hem/supportertroja.html</span></a></li>
+          <li><a class="link-item" href="./Hem/lss-mossa-gtk-nova.html"><span class="link-title">LSS M&ouml;ssa (GTK Nova)</span><span class="path">Hem/lss-mossa-gtk-nova.html</span></a></li>
+          <li><a class="link-item" href="./Hem/elis-badhandduk.html"><span class="link-title">Elis Badhandduk</span><span class="path">Hem/elis-badhandduk.html</span></a></li>
+          <li><a class="link-item" href="./Hem/lss-badmossa.html"><span class="link-title">LSS Badm&ouml;ssa</span><span class="path">Hem/lss-badmossa.html</span></a></li>
+          <li><a class="link-item" href="./Hem/vit-funktionstroja-klubbmodell.html"><span class="link-title">Vit Funktionstr&ouml;ja &ndash; Klubbmodell</span><span class="path">Hem/vit-funktionstroja-klubbmodell.html</span></a></li>
+          <li><a class="link-item" href="./Hem/craft-klubbshorts-bla.html"><span class="link-title">Craft Klubbshorts &ndash; Bl&aring;</span><span class="path">Hem/craft-klubbshorts-bla.html</span></a></li>
         </ul>
       </article>
 
@@ -270,7 +286,6 @@
         <h2><span class="badge">Simskola</span> Grupper och innehåll</h2>
         <ul class="links">
           <li><a class="link-item" href="./simskola/simskolegrupper/simskolegrupper.html"><span class="link-title">Simskolegrupper</span><span class="path">simskola/simskolegrupper/simskolegrupper.html</span></a></li>
-          <li><a class="link-item" href="./simskola/vanligt-stallda-fragor.html"><span class="link-title">Vanligt ställda frågor</span><span class="path">simskola/vanligt-stallda-fragor.html</span></a></li>
           <li><a class="link-item" href="./simskola/simskolegrupper/minisim.html"><span class="link-title">Minisim</span><span class="path">simskola/simskolegrupper/minisim.html</span></a></li>
           <li><a class="link-item" href="./simskola/simskolegrupper/baddaren.html"><span class="link-title">Baddaren</span><span class="path">simskola/simskolegrupper/baddaren.html</span></a></li>
           <li><a class="link-item" href="./simskola/simskolegrupper/skoldpaddan.html"><span class="link-title">Skoldpaddan</span><span class="path">simskola/simskolegrupper/skoldpaddan.html</span></a></li>
@@ -287,6 +302,7 @@
           <li><a class="link-item" href="./simskola/fritidskortet.html"><span class="link-title">Fritidskortet</span><span class="path">simskola/fritidskortet.html</span></a></li>
           <li><a class="link-item" href="./simskola/avgifter.html"><span class="link-title">Avgifter</span><span class="path">simskola/avgifter.html</span></a></li>
           <li><a class="link-item" href="./simskola/ova-i-vatten.html"><span class="link-title">Ova i vatten</span><span class="path">simskola/ova-i-vatten.html</span></a></li>
+          <li><a class="link-item" href="./simskola/vanligt-stallda-fragor.html"><span class="link-title">Vanligt ställda frågor</span><span class="path">simskola/vanligt-stallda-fragor.html</span></a></li>
         </ul>
       </article>
 
