--- a/frontend/simskola/simskolegrupper/simskolegrupper.html
+++ b/frontend/simskola/simskolegrupper/simskolegrupper.html
@@ -308,6 +308,18 @@
         <p style="margin:8px 0 0 0;color:#2f4c61;line-height:1.6;font-size:14px;">Badkläder, handduk och gärna simglasögon. All simutrustning (flytvästar, plattor etc.) tillhandahåller vi.</p>
       </details>
     </section>
+
+    <section style="background:rgba(255,255,255,0.88);border:1px solid rgba(0,90,153,0.12);border-radius:20px;box-shadow:0 6px 20px rgba(0,90,153,0.07);padding:24px;margin-bottom:18px;">
+      <h2 style="margin:0 0 10px 0;color:#005a99;line-height:1.3;font-size:22px;">Relaterade sidor</h2>
+      <p style="margin:0 0 12px 0;color:#2f4c61;line-height:1.6;font-size:14px;">För fler kontaktvägar och om du vill engagera dig i föreningen.</p>
+      <div style="display:flex;gap:10px;flex-wrap:wrap;">
+        <a href="../../Kontakt/Kontaktportal.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:700;background:#005a99;color:#fff;">Kontaktportal</a>
+        <a href="../../Kontakt/kontaktuppgifter.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Kontaktuppgifter</a>
+        <a href="../../Kontakt/Ledare.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Bli ledare</a>
+        <a href="../../Kontakt/Hjalp_Till_I_Lss.html" style="display:inline-flex;align-items:center;justify-content:center;padding:11px 16px;min-height:40px;border-radius:6px;border:1px solid #005a99;text-decoration:none;font-size:14px;font-weight:600;background:#fff;color:#005a99;">Hjälp till i LSS</a>
+      </div>
+    </section>
+
     <div style="background: rgba(255,255,255,0.95); border-radius: 16px; border: 1px solid rgba(0,90,153,0.1); padding: 24px; margin-bottom: 28px; box-shadow: 0 8px 32px rgba(0,90,153,0.08);">
       <h3 style="margin: 0 0 10px 0; font-size: 18px; font-weight: 700; color: #005a99;">🏅 Vill du läsa mer om simmärken?</h3>
       <p style="margin: 0 0 10px 0; font-size: 14px; line-height: 1.6; color: #4a6a7e;">
